--- a/css/styles.css
+++ b/css/styles.css
@@ -5,27 +5,14 @@
 body {
     background-color: #601344;
     color: white;
-    font-family: sans-serif;
-    line-height: 1.5em;
-    margin: 0;
-
-}
-
-h1, h2, h3 {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
+    line-height: 1.5em;
+    margin: 0;
 }
 
+/* ==================== Typo ======================*/
 
-
-main {
-    padding: 20px;
-}
-
-header {
-    background: #1a1d1f;
-    padding: 20px;
-}
 
 h1 {
     color: white;
@@ -33,8 +20,9 @@ h1 {
     border: 1px dotted #676c71;
     padding: 20px;
     border-radius: 50px;
-    
-    
+    box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.100);
+    font-weight: 300;
+
 }
 
 h2 {
@@ -49,19 +37,31 @@ p {
     text-align: center;
 }
 
-.portrait {
-    border-radius: 100px;
-    width: 50%;
-    margin: 0 auto;
-    display: block;
-    box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.75);
-}
-
 a {
     color: white;
     text-decoration: none;
     margin: 10px 10px 0 0;
     border-bottom: 1px hotpink dotted;
+    padding: 4px;
+}
+
+strong {
+    color: hotpink;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+}
+
+/*=================== Layout ========================*/
+
+main {
+    padding: 20px;
+}
+
+header {
+    background: #1a1d1f;
+    padding: 15px;
+    border-bottom: 1px hotpink dotted;
+
 }
 
 nav {
@@ -70,23 +70,10 @@ nav {
  margin-bottom: 20px;
 }
 
-
-
-.social_card {
-    background-color: white;
-    margin-top: 20px;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.45);
-
-
-}
-
-.social_card img {
-width: 35%;
+footer {
+    background: #2d3033;
+    padding: 20px;
+    background: #1a1d1f;
 }
 
 ul{
@@ -100,16 +87,42 @@ li {
     padding: 5px 0;
 }
 
-footer {
-    background: #2d3033;
-    padding: 20px;
+/*======================= Classes ===================*/
+
+.portrait {
+    border-radius: 1000px;
+    width: 200px;
+    margin: 0 auto;
+    display: block;
+    box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.75);
+}
+
+.social_card {
+    background-color: white;
+    margin-top: 20px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.45);
+}
+
+.social_card img {
+width: 35%;
+}
+
+.link_button {
+    border-bottom: 1px hotpink dotted;
     background: #1a1d1f;
-
-
+    padding: 10px;
 }
 
-strong {
-    color: hotpink;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 300;
+.last_name {
+    color: mediumvioletred;
 }
+
+
+
+
+
