--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
     font-weight: 300;
     line-height: 1.5em;
     margin: 0;
+    font-size: 112.5%;
 }
 
 /* ==================== Typo ======================*/
@@ -17,7 +18,6 @@ body {
 h1 {
     color: white;
     text-align: center;
-    border: 1px dotted #676c71;
     padding: 20px;
     border-radius: 50px;
     box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.100);
@@ -65,9 +65,9 @@ header {
 }
 
 nav {
- display: flex;
- justify-content: flex-start;
- margin-bottom: 20px;
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 20px;
 }
 
 footer {
@@ -91,11 +91,12 @@ li {
 /*======================= Classes ===================*/
 
 .portrait {
-    border-radius: 1000px;
-    width: 200px;
-    margin: 0 auto;
+    width: 180px;
+    margin: 0 auto 30px auto;
     display: block;
     box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.75);
+    transform: rotate(-10deg);
+    border: 2px white solid;
 }
 
 .social_card {
@@ -106,6 +107,19 @@ li {
     justify-content: center;
     border-radius: 10px;
     box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.45);
+}
+
+.skills {
+    display: flex;
+    grid-gap: 5px;
+    flex-wrap: wrap;
+}
+
+.skills li {
+    border-bottom: 1px hotpink dotted;
+    background: #1a1d1f;
+    padding: 10px;
+    
 }
 
 .social_card img {
@@ -120,7 +134,6 @@ width: 35%;
 
 .last_name {
     color: grey;
-    font-weight: bold;
 }
 
 .impressum {
