--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ h1 {
 
 h2 {
     color: hotpink;
-    margin-top: 50px;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
 }
@@ -38,11 +37,12 @@ p {
 
 a {
     color: white;
-    text-decoration: none;
     margin: 10px 10px 0 0;
-    border-bottom: 1px hotpink dotted;
+    /*border-bottom: 1px hotpink dotted;*/
     padding: 4px;
 }
+
+
 
 strong {
     color: hotpink;
@@ -52,7 +52,7 @@ strong {
 
 em {
     font-style: normal;
-    font-weigt:normal;
+    font-weight:normal;
 }
 
 /*=================== Layout ========================*/
@@ -106,12 +106,13 @@ a:hover {
     box-shadow: 0px 0px 71px -15px rgba(0,0,0,0.75);
     transform: rotate(-10deg);
     border: 2px white solid;
+    border-radius: 10px;
 }
 
 @media (min-width: 600px){
    .intro{
        display: flex;
-       grid-gap: 80px;
+       grid-gap: 80px; /* Wieso geht das? */
    }
    .intro p {
        text-align: left;
@@ -123,8 +124,38 @@ a:hover {
    }
    .links {
        display: flex;
+       justify-content: space-between;
+       
+   }
+
+   p {
+       text-align: left;
    }
 }
+
+@media (min-width: 900px){
+    .bio {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 60px;
+    }
+
+    .bio {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 60px;
+    }
+
+    .links {
+        width: 100%;
+    }
+
+    .social_card {
+    }
+
+}
+
+
 
 .social_card {
     background-color: white;
@@ -176,6 +207,11 @@ display: flex;
     padding: 10px;
     border-bottom: 1px hotpink dotted;
 }
+
+.links a{
+    border: none;
+}
+
 
 
 
