--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ ul {
 
 li {
   border-bottom: 2px dotted hotpink;
-  padding: 5px 0;
+  padding: px 0;
 }
 
 a:hover {
@@ -166,7 +166,7 @@ a:hover {
 
 .skills {
   display: flex;
-  grid-gap: 5px;
+  gap: 5px;
   flex-wrap: wrap;
 }
 
