--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,7 @@ a:hover {
   h2 {
     text-align: left;
     display: box;
+    text-indent: 5px;
   }
   .links {
     display: flex;
@@ -164,7 +165,7 @@ a:hover {
 }
 
 .social_card:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .skills {
