--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,12 @@ h2 {
   color: hotpink;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
+  text-indent: 5px;
 }
 
 p {
   text-align: center;
+  padding-left: 5px;
 }
 
 a {
@@ -124,7 +126,6 @@ a:hover {
   h2 {
     text-align: left;
     display: box;
-    text-indent: 5px;
   }
   .links {
     display: flex;
@@ -204,4 +205,8 @@ a:hover {
 
 .pinklink {
   border-bottom: hotpink dotted 1px;
+}
+
+.contact_links {
+  margin-bottom: -50px;
 }
