--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,8 +8,13 @@ body {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
   line-height: 1.5;
-  margin: 0;
+  margin: 0 auto;
   font-size: 112.5%;
+  max-width: 1000px;
+}
+
+html {
+  background: #460d31;
 }
 
 /* ==================== Typo ======================*/
@@ -70,9 +75,14 @@ header {
 header a {
   margin-left: auto;
   background: #601344;
-  padding: 15px;
+  padding: 0.5em 0.8em;
   border-radius: 10px;
   text-decoration: none;
+  transition: transform 0.5s ease-out;
+}
+
+header a:hover {
+  transform: scale(1.1)
 }
 
 nav {
@@ -113,9 +123,15 @@ a:hover {
   transform: rotate(-10deg);
   border: 2px white solid;
   border-radius: 10px;
+  transition: transform 0.5s ease-out;
+}
+
+.portrait:hover {
+  transform: rotate(-1deg)
 }
 
 @media (min-width: 600px) {
+  
   .intro {
     display: flex;
     grid-gap: 80px; /* Wieso geht das? */
@@ -169,6 +185,13 @@ a:hover {
   }
 }
 
+@media(min-width: 1000px){
+  html {
+    padding: 1em;
+  }
+  
+}
+
 .social_card {
   background-color: white;
   padding: 10px;
@@ -177,10 +200,12 @@ a:hover {
   justify-content: center;
   border-radius: 10px;
   box-shadow: 0px 0px 71px -15px rgba(0, 0, 0, 0.45);
+  transition: all 0.5s ease-out;
 }
 
 .social_card:hover {
   opacity: 0.8;
+  transform: scale(1.1);
 }
 
 .skills {
